Changes in 0.50.11:
  * Reworked file addition to local database a bit for better performance
  * Fixed sorting for --info
  * Don't make --info installs require a writeable database

Changes in 0.50.10:
  * Added callback for creating database transaction, so that it does 
    not look like we spend an inordinate amount of time executing tag
    pre scripts.
  * Added findtrove.py to the Makefile so that it is included in
    the distributed version of conary.
  * Added distcheck rule to Makefile to try and avoid missing files in the
    future

Changes in 0.50.9:
  * reimplemented StreamSet in C
  * moved findTroves out to findtrove.py, reworked it to be more modular
  * getSourceVersion now correctly handles branched binaries by looking
    up the branch to find the source component.
  * reimplemented StringStream in C
  * fixed bugs in --info

Changes in 0.50.8:
  * sort update --info alphabetically, display old versions, and display
    a letter summarizing the type of change
  * NormalizeInterpreterPaths() policy now looks in the package currently
    being built, as well as on the installed system, to determine how to
    resolve #!/usr/bin/env scripts.
  * groupName argument to addTrove() can now be a list of group names as
    well as a single group name.
  * --no-recurse works on the erase path
  * fix to walkTroveSet (which was horribly broken)
  * enable (optional) dependency checking when building groups
  * 'cvc cook' error output when there are unresolved build
    requirements is more user friendly
  * filesystem conflicts are handled properly when applying a rollback
  * updating a package to a version that comes from a different
    repository when that package had an uninstalled component works
    now.
  * conary now resides in /usr/$LIB/python$PYVERSION/site-packages/conary/
  * calling r.Replace on a non-regular file results in a warning instead
    of an unhandled exception
  * implemented basic callbacks for update, erase, and changesets
